...
    <Button testID="action-cancel" onPress={onCancel}>
      {cancelText ?? <T keyName="generic.cancel.button" />}
    </Button>
  );
  const okButton = (
    <Button
      testID="action-ok"
      onPress={onOk}
      textColor={destructive ? (isDark ? '#FF6B60' : '#D70015') : undefined}
    >
      {okText ?? <T keyName="generic.ok.button" />}
    </Button>
  );
...
