...
              },
              {
                value: 'cardio',
                label: 'Cardio/Time',
                icon: DirectionsRunIcon,
                systemImage: 'figure.run',
                testID: 'cardio-button',
              },
            ]}
            onChange={handleTypeChange}
          />
        </FormRow>
        {exerciseEditor}
...
