...
          borderBottomRightRadius: showsWeight ? 0 : theme.radius.md,
          overflow: 'hidden',
        }}
      >
        <Pressable
          onPress={props.onPressReps}
          testID="repcount"
          style={{
            flexShrink: 0,
            height: size.repsHeight,
            alignItems: 'center',
            justifyContent: 'center',
            backgroundColor: isFilled ? theme.color.interactive.tint : theme.color.fill.secondary,
...
            padding: size.weightPadding,
            width: '100%',
          }}
        >
          <Pressable
            onPress={props.onPressWeight}
            testID="repcount-weight"
            style={{
              alignItems: 'center',
              margin: -size.weightPadding,
              padding: size.weightPadding,
            }}
          >
...
