...
  if (!thisProgram) {
    return null;
  }

  return (
    <Menu
      trigger={(open) => <IconButton testID="more-program-btn" mode={mode} onPress={open} icon={'moreHoriz'} />}
      items={[
        {
          label: t('generic.edit.button'),
          icon: 'edit',
          systemImage: 'pencil',
          onPress: () => push(`/settings/manage-workouts/${id}`),
...
