...
            </Text>
          )}
        </View>
      ))}
      {rules.length > 0 && <Divider style={{ marginBlockStart: theme.space.sm }} />}
      <View style={{ flexDirection: 'row', alignItems: 'center', gap: theme.space.sm }}>
        <Button style={{ flex: 1 }} icon="add" testID="progression-add-rule" onPress={addRule}>
          {t('exercise.progression.add_rule.label')}
        </Button>
        {rules.length > 0 && <ProgressionExample exercise={props.exercise} />}
      </View>
    </View>
  );
...
