...
      }}
    >
      <TextInput
        label={t('exercise.name.label')}
        value={exercise.name}
        onChangeText={(name) => update({ name })}
        testID="exercise-name-input"
      />
      <TextInput
        label={t('generic.instructions.label')}
        value={exercise.instructions}
        onChangeText={(instructions) => update({ instructions })}
        multiline
        testID="exercise-instructions-input"
      />
      <ExerciseMuscleSelector muscles={exercise.muscles} onChange={(muscles) => update({ muscles })} />
    </View>
  );
}

