...
        value={searchText}
        defaultValue={searchText}
        onChangeText={setSearchText}
        autoCapitalize={'words'}
        autoCorrect={false}
        style={{ marginHorizontal: theme.layout.screenPadding }}
        testID="exercise-search-input"
      />

      <Card mode="contained" style={{ marginHorizontal: theme.layout.screenPadding }}>
        <Card.Title
          title={t('generic.filters.title')}
          subtitle={selectedFiltersSubtitle}
...
